[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Kenney platformer characters/PNG/Adventurer/Poses/adventurer_walk2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Kenney platformer characters/PNG/Adventurer/Poses/adventurer_walk1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Kenney platformer characters/PNG/Adventurer/Poses/adventurer_hurt.png" type="Texture" id=4]
[ext_resource path="res://Assets/sounds/switch23.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 45.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walk",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Killed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 33, 46.5 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 34
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13.5 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 4 )
frames = SubResource( 2 )
animation = "Walk"
playing = true

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 60 )
collide_with_areas = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( -38, 0 )
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 38, 13.5 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 1

[node name="SoundKill" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
